[tool.poetry]
name = "gpt-explore"
version = "0.1.0"
description = ""
authors = ["andrehamm <andre.m.hamm@gmail.com>"]
readme = "README.md"
packages = [{include = "gpt_explore"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
openapi = "^1.1.0"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
